--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^2.3.4",
     "@rollup/plugin-typescript": "^6.0.0",
+    "@tsconfig/svelte": "^1.0.10",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.167",
     "@types/node": "^14.14.2",
@@ -34,7 +35,10 @@
     "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
     "prettier": "^2.2.1",
     "rollup": "^2.32.1",
+    "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-web-worker-loader": "^1.5.0",
+    "svelte": "^3.31.2",
+    "svelte-preprocess": "^4.6.1",
     "ts-jest": "^26.4.4",
     "tslib": "^2.0.3",
     "typedoc": "^0.20.14",
